// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<div>
  <p>
    Viewing 
     expenses totalling 
    $0.00
  </p>
</div>
`;

exports[`should render with the correct amount 1`] = `
<div>
  <p>
    Viewing 
    3
     expenses totalling 
    $1,141.92
  </p>
</div>
`;
